--- a/administration/templates/users/form.html
+++ b/administration/templates/users/form.html
@@ -10,11 +10,38 @@
     </div>
     <div class="card-body">
         <form method="POST">
-            {% csrf_token %}
-            {% bootstrap_form user_form %}
-            <button type="submit" class="btn btn-primary">
-                Cadastrar
-            </button>
+            <div class="row">
+                {% csrf_token %}
+
+                <div class="col-sm-12 col-md-12 col-lg-12">
+                    <div class="form-group">
+                        {% bootstrap_field user_form.username %}
+                    </div>
+                </div>
+
+                <div class="col-sm-12 col-md-6 col-lg-6">
+                    <div class="form-group">
+                        {% bootstrap_field user_form.password1 %}
+                    </div>
+                </div>
+
+                <div class="col-sm-12 col-md-6 col-lg-6">
+                    <div class="form-group">
+                        {% bootstrap_field user_form.password2 %}
+                    </div>
+                </div>
+
+                <div class="col-sm-12 col-md-12 col-lg-12 text-right">
+                    <hr>
+                    <a href="{% url 'list_user' %}" class="btn btn-primary">
+                        <i class="fas fa-arrow-left"></i> Voltar
+                    </a>
+                    <button type="submit" class="btn btn-success">
+                        <i class="fas fa-check"></i> Cadastrar
+                    </button>
+                </div>
+
+            </div>
         </form>
     </div>
 </div>
