--- a/administration/templates/services/index.html
+++ b/administration/templates/services/index.html
@@ -3,30 +3,39 @@
 {% block title %}Listagem de serviços{% endblock title %}
 
 {% block content %}
-<div class="card">
+<div class="card card-primary">
     <div class="card-header">
-        <h3 class="card-title">Lista de serviços</h3>
+        <div class="card-title">Lista de Serviços</div>
     </div>
-    <div class="card-body p-0">
-        <table class="table table-condensed">
-            <thead>
-                <tr>
-                    <th>Nome</th>
-                    <th>Valor mínimo</th>
-                    <th>Ações</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for service in services %}
-                <tr>
-                    <td>{{service.name}}</td>
-                    <td>{{service.min_value}}</td>
-                    <td><a href="{% url 'edit_service' service.id %}">Editar</a></td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+    <div class="card-body">
+        <div class="row">
+            <div class="col-12">
+                <table class="table table-condensed">
+                    <thead>
+                        <tr>
+                            <th>Nome</th>
+                            <th>Valor mínimo</th>
+                            <th>Ações</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for service in services %}
+                        <tr>
+                            <td>{{service.name}}</td>
+                            <td>R$ {{service.min_value}}</td>
+                            <td><a href="{% url 'edit_service' service.id %}">Editar</a></td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="col-12 text-right">
+            <hr>
+            <a href="{% url 'create_service' %}" class="btn btn-success">
+                <i class="fas fa-plus"></i> Cadastrar
+            </a>
+        </div>
     </div>
 </div>
-<a href="{% url 'create_service' %}" class="btn btn-primary">Cadastrar</a>
 {% endblock content %}
