--- a/administration/templates/users/index.html
+++ b/administration/templates/users/index.html
@@ -14,16 +14,18 @@
                     <thead>
                         <tr>
                             <th>Nome</th>
-                            <th>Admin</th>
+                            <th>Email</th>
+                            <th>Usuário</th>
                             <th>Ações</th>
                         </tr>
                     </thead>
                     <tbody>
                         {% for user in users %}
                         <tr>
+                            <td>{{user.first_name}}</td>
+                            <td>{{user.email}}</td>
                             <td>{{user.username}}</td>
-                            <td>{{user.is_superuser}}</td>
-                            <td><a href="#">Editar</a></td>
+                            <td><a href="{% url 'edit_user' user.id %}">Editar</a></td>
                         </tr>
                         {% endfor %}
                     </tbody>
